examples/parse_error/missing_closing_paren5.nbt
dimension Foo = Bar^(-3 * Baz
